--- a/packages/mesh-provider/package.json
+++ b/packages/mesh-provider/package.json
@@ -35,7 +35,9 @@
   "dependencies": {
     "@meshsdk/common": "*",
     "@meshsdk/core-cst": "*",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "@utxorpc/sdk": "0.4.0",
+    "@utxorpc/spec": "0.9.0"
   },
   "prettier": "@meshsdk/configs/prettier",
   "publishConfig": {
